--- a/Views/UserManagement/Index.cshtml
+++ b/Views/UserManagement/Index.cshtml
@@ -44,7 +44,7 @@
                     <td>
                         <div class="d-flex align-items-center">
                             <div class="me-2">
-                                <img src="@(string.IsNullOrEmpty(user.PhotoUrl) ? "/images/brian.jpg" : user.PhotoUrl)"
+                                <img src="@(string.IsNullOrEmpty(user.PhotoUrl) ? "/images/default.png" : user.PhotoUrl)"
                                      class="rounded-circle" width="40" height="40" alt="User photo">
                             </div>
                             <div>
