--- a/Views/Visits/Index.cshtml
+++ b/Views/Visits/Index.cshtml
@@ -18,7 +18,7 @@
         {
             <tr>
                 <td>@visit.VisitorName</td>
-                <td>@visit.EntryTime.ToString("g")</td>
+                <td>@visit.EntryTime?.ToString("g")</td>
                 <td>@visit.LicensePlate</td>
                 <td>
                     <div class="btn-group btn-group-sm">
