--- a/Views/Visits/Delete.cshtml
+++ b/Views/Visits/Delete.cshtml
@@ -5,7 +5,7 @@
 <h3>Are you sure you want to delete this visit?</h3>
 <div>
     <h4>@Model.VisitorName</h4>
-    <p>Entry: @Model.EntryTime.ToString("g")</p>
+    <p>Entry: @Model.EntryTime?.ToString("g")</p>
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
