--- a/Views/Visits/Details.cshtml
+++ b/Views/Visits/Details.cshtml
@@ -12,7 +12,7 @@
             <dd class="col-sm-9">@Model.VisitorDni</dd>
 
             <dt class="col-sm-3">Entry Time:</dt>
-            <dd class="col-sm-9">@Model.EntryTime.ToString("g")</dd>
+            <dd class="col-sm-9">@Model.EntryTime?.ToString("g")</td>
 
             <dt class="col-sm-3">License Plate:</dt>
             <dd class="col-sm-9">@Model.LicensePlate</dd>
